# aurora

./: CMakeLists.txt  README.md  package.xml
launch/: build_map.launch  gmapping_build_map.launch  kinect_to_laser.launch  robot_setup.launch  rtabmap_build_map.launch  rtabmap_localization.launch
launch/config/: map.rviz  rtabmap_map.rviz
src/odom_node/: aurora_odom.pro  odom_node.cpp
src/odom_test_node/: astar.cpp  astar.h  aurora_odom_test.pro  common.h  main.cpp  mainwindow.cpp  mainwindow.h  nodeqt.cpp  nodeqt.h  odometrymap.cpp  odometrymap.h  pathcontroller.cpp  pathcontroller.h
src/remote_control_server/: main.cpp  nodeqt.cpp  nodeqt.h  remote_control_server.pro
src/setup_tf_node/: RobotSetupTf.pro  setup_tf_node.cpp
